fix(planning): resolve final review findings