@@ -1,6 +1,8 @@
 package com.shitulelv.aicollab.planning.domain;
 
 import java.util.List;
+import java.util.ArrayList;
+import java.util.Collections;
 
 public record TaskPlanDraft(
         String summary,
@@ -10,10 +12,14 @@ public record TaskPlanDraft(
         List<PlanTask> tasks,
         List<PlanSource> sources) {
     public TaskPlanDraft {
-        assumptions = assumptions == null ? List.of() : List.copyOf(assumptions);
-        risks = risks == null ? List.of() : List.copyOf(risks);
-        milestones = milestones == null ? List.of() : List.copyOf(milestones);
-        tasks = tasks == null ? List.of() : List.copyOf(tasks);
-        sources = sources == null ? List.of() : List.copyOf(sources);
+        assumptions = immutable(assumptions);
+        risks = immutable(risks);
+        milestones = immutable(milestones);
+        tasks = immutable(tasks);
+        sources = immutable(sources);
+    }
+
+    private static <T> List<T> immutable(List<T> values) {
+        return values == null ? List.of() : Collections.unmodifiableList(new ArrayList<>(values));
     }
 }
